--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
+@font-face {
+  font-family: 'superfont';
+  src: url('./img/superfont.ttf') format('truetype');
+}
+
 * {
-  font-family: 'Raleway', sans-serif;
-  /* Set font-family to Raleway */
+  font-family: 'superfont', sans-serif;
+  /* Set font-family to 'superfont' and fallback to sans-serif if 'superfont' is not available */
   box-sizing: border-box;
 }
 
