--- a/src/components/DialogBox.css
+++ b/src/components/DialogBox.css
@@ -80,6 +80,7 @@
     transition: background-color 0.2s;
     /* Add smooth background color transition */
     margin-left: 10px;
+    letter-spacing: 1.5px;
 }
 
 .try-again-button:hover {
@@ -119,6 +120,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
