--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
   font-family: 'superfont', sans-serif;
   /* Set font-family to 'superfont' and fallback to sans-serif if 'superfont' is not available */
   box-sizing: border-box;
+  letter-spacing: 1px;
 }
 
 body {
@@ -15,12 +16,6 @@ body {
   /* This will resize the background image to cover the whole container */
   background-attachment: fixed;
   /* This will make the background image static against scrolling */
-  background-color: rgb(225, 222, 222);
-  color: hsl(0, 0%, 0%);
-  font-size: 24px;
-  max-width: 60%;
-  padding: 2rem;
-  margin: 0 auto;
 }
 
 .wrapper {
@@ -40,7 +35,6 @@ body {
 .large-text {
   font-size: 60px;
   text-align: center;
-  margin-bottom: 5px;
   text-shadow: 10px 10px 20px rgb(0, 0, 0);
   letter-spacing: 2px;
   /* Adjust margin as needed */
@@ -53,18 +47,6 @@ body {
 
 .App {
   text-align: center;
-}
-
-.new-item-form {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
-.form-row {
-  display: flex;
-  flex-direction: column;
-  gap: 0.1rem;
 }
 
 .btn {
@@ -91,126 +73,4 @@ body {
 .btn.btn-danger:hover,
 .btn.btn-danger:focus-visible {
   background: hsl(0, 100%, 40%, 0.2);
-}
-
-.new-item-form input {
-  outline: none;
-  border: 1px solid hsl(200, 100%, 40%);
-  background: hsl(200, 100%, 30%);
-  border-radius: 0.25em;
-  padding: 0.25em 0.5em;
-  color: hsl(200, 100%, 90%);
-}
-
-.new-item-form input:focus {
-  border: 1px solid hsl(200, 100%, 70%);
-}
-
-.header {
-  font-size: 1.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.list {
-  margin: 0;
-  padding: 0;
-  margin-left: 1rem;
-  list-style: none;
-}
-
-.list li:has(input:checked) label {
-  color: hsl(200, 20%, 40%);
-}
-
-.list {
-  display: flex;
-  flex-direction: column;
-  gap: 0.3rem;
-}
-
-.list li {
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-}
-
-.list li label {
-  display: flex;
-  gap: 0.25rem;
-  cursor: pointer;
-  align-items: center;
-}
-
-.list li:has(input:focus-visible) label {
-  outline: 1px solid hsl(200, 100%, 50%);
-}
-
-.list li input {
-  outline: none;
-  width: 0;
-  height: 0;
-  appearance: none;
-  pointer-events: none;
-  position: absolute;
-}
-
-.list li label::before {
-  content: "";
-  display: block;
-  width: 0.9rem;
-  height: 0.9rem;
-  background: hsl(200, 100%, 90%);
-  border-radius: 0.25em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.list li label:hover::before {
-  background: hsl(200, 100%, 80%);
-}
-
-.list li:has(input:checked) label::before {
-  content: "✔";
-  background: hsl(200, 100%, 40%);
-  color: hsl(200, 100%, 90%);
-  font-size: 0.75rem;
-  font-weight: bold;
-}
-
-.list li:has(input:checked) label:hover::before {
-  background: hsl(200, 100%, 30%);
-}
-
-.fixed-width {
-  width: 200px;
-  /* Set the desired fixed width */
-}
-
-.superhero-name {
-  font-size: 20px;
-  color: green;
-  /* You can set your desired color */
-}
-
-.placeholder-text {
-  font-size: 20px;
-  color: rgb(167, 167, 167);
-  /* You can set your desired color */
-}
-
-
-
-.superhero-container {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.superhero-image img {
-  width: 40px;
-  /* Set the desired width for the images */
-  height: 40px;
-  /* Set the desired height for the images */
 }
