added image to anim comp

--- a/src/components/Animation.css
+++ b/src/components/Animation.css
@@ -1,5 +1,5 @@
 .game-container {
-    background-color: rgba(0, 0, 0, 0.469);
+    background: url('./gameimg/animation.png');
     /* Set the background color to black */
     width: 100%;
     /* Set the width of the container */
@@ -7,8 +7,12 @@
     /* Set the height of the container */
     margin: 0 auto;
     /* Center the container horizontally */
-    padding: 0px;
-    /* Add some padding inside the container */
+    padding: 0;
+    /* Remove padding inside the container */
+    background-size: cover;
+    /* Ensure the background image covers the entire container */
+    background-position: center;
+    /* Center the background image within the container */
     /* border-radius: 10px; */
     /* Optional: Add border-radius for rounded corners */
     color: white;
@@ -16,6 +20,7 @@
     position: relative;
     /* Ensure .game-object is positioned relative to this container */
 }
+
 
 .animation-container {
     position: relative;
