--- a/src/components/Animation.css
+++ b/src/components/Animation.css
@@ -45,7 +45,7 @@
 .grid-cell {
     width: 30px;
     height: 30px;
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
 }
 
 .grid-row {
@@ -53,7 +53,7 @@
 }
 
 .green-box {
-    background-color: green;
+    /* background-color: green; */
 }
 
 @keyframes moveDown {
