--- a/src/components/Animation.css
+++ b/src/components/Animation.css
@@ -40,6 +40,7 @@
     /* Adjust the duration of the animation */
     animation-timing-function: ease-in-out;
     /* Use ease-in-out timing function */
+    z-index: 2;
 }
 
 .grid-cell {
