--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background: url('./img/webBG.png');
+  background: url('./img/BG.png');
   background-size: cover;
   /* This will resize the background image to cover the whole container */
   background-attachment: fixed;
@@ -28,7 +28,7 @@ body {
   /* Add padding as needed */
   border-radius: 10px;
   /* Optional: Add border-radius for rounded corners */
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.544);
+  box-shadow: 0 0 25px rgb(0, 0, 0);
   text-align: left;
 }
 
