added new anim bg

--- a/src/components/Animation.css
+++ b/src/components/Animation.css
@@ -1,5 +1,5 @@
 .game-container {
-    background: url('./gameimg/animation.png');
+    background: url('./gameimg/animation3.png');
     /* Set the background color to black */
     width: 100%;
     /* Set the width of the container */
