--- a/src/components/PaperCutoutOverlay.css
+++ b/src/components/PaperCutoutOverlay.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 40%;
     /* Adjust the height based on where you want the cutout to be */
-    background: url('./gameimg/boxes.png') center/cover no-repeat;
+    background: url('./gameimg/boxes2.png') center/cover no-repeat;
     opacity: 1;
     /* Adjust the opacity as needed */
     z-index: 3;
