--- a/src/components/Wire.css
+++ b/src/components/Wire.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 2px;
     height: 0;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     z-index: 1;
     top: 0px;
 }
@@ -12,21 +12,21 @@
 
 @keyframes extendWire {
     from {
-        height: 0;
+        height: 0%;
     }
 
     to {
-        height: 70%;
+        height: 75%;
     }
 }
 
 @keyframes retractWire {
     from {
-        height: 70%;
+        height: 75%;
     }
 
     to {
-        height: 0;
+        height: 0%;
     }
 }
 
