--- a/src/components/Animation.css
+++ b/src/components/Animation.css
@@ -46,7 +46,7 @@
 .grid-cell {
     width: 60px;
     height: 60px;
-    border: 1px solid #ff0000;
+    border: 1px solid #ff000000;
     z-index: 5;
 }
 
