--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -38,17 +38,18 @@
 /* Style "Prev" and "Next" buttons */
 .navigation-buttons .prev-button {
     order: 1;
+    margin: 5px 5px;
 }
 
 .navigation-buttons .next-button {
     order: 3;
+    margin: 5px 5px;
 }
 
 /* Style "Close" button */
 .close-button {
     order: 2;
-    margin: 10 10px;
-    /* Add space between the buttons */
     padding: 5px;
     border-radius: 5px;
+    position: center;
 }
