--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -73,3 +73,10 @@
     transform: translate(-50%, -50%) scale(0.8);
     /* Scale down the component */
 }
+
+.tutorial-image {
+    width: 80%;
+    height: 80%;
+    border: 2px solid hsl(0, 0, 0);
+    border-radius: 10px;
+}
