--- a/src/styles.css
+++ b/src/styles.css
@@ -79,9 +79,10 @@ body {
   padding: 5px;
   font-size: 18px;
   background-color: #00ff08;
-  color: white;
+  color: rgb(0, 0, 0);
   border: 2px solid hsl(0, 0%, 0%);
   border-radius: 5px;
+
   cursor: pointer;
   transition: background-color 0.2s;
 }
