--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -52,19 +52,36 @@
 .navigation-buttons .prev-button {
     order: 1;
     margin: 5px 5px;
+    background-color: #c3c3c3;
+    transition: background-color 0.2s;
+}
+
+.navigation-buttons .prev-button:hover {
+    background-color: #00ffe5;
 }
 
 .navigation-buttons .next-button {
     order: 3;
     margin: 5px 5px;
+    background-color: #c3c3c3;
+    transition: background-color 0.2s;
+}
+
+.navigation-buttons .next-button:hover {
+    background-color: #00ffe5;
 }
 
 /* Style "Close" button */
 .close-button {
     order: 2;
     padding: 5px;
+    background-color: #c3c3c3;
+    transition: background-color 0.2s;
     border-radius: 5px;
-    position: center;
+}
+
+.close-button:hover {
+    background-color: #00ffe5;
 }
 
 .tutorial-dialog.closing {
@@ -79,4 +96,20 @@
     height: 80%;
     border: 2px solid hsl(0, 0, 0);
     border-radius: 10px;
+}
+
+.tutorial-button {
+    padding: 5px;
+    font-size: 18px;
+    background-color: #00ff08;
+    color: rgb(0, 0, 0);
+    border: 2px solid hsl(0, 0%, 0%);
+    border-radius: 5px;
+
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
+.tutorial-button:hover {
+    background-color: #00ffe5;
 }
