tut screen gradient

--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -5,7 +5,8 @@
     transform: translate(-50%, -50%);
     width: 800px;
     height: 800px;
-    background-color: white;
+    background: linear-gradient(to bottom, #ff7272, rgb(255, 211, 211));
+
     border: 2px solid black;
     border-radius: 20px;
     padding: 20px;
