--- a/src/styles.css
+++ b/src/styles.css
@@ -23,13 +23,14 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgb(255, 255, 255);
+  background: linear-gradient(to bottom, #5d82fc, rgb(213, 221, 252));
   padding: 10px;
   /* Add padding as needed */
   border-radius: 10px;
   /* Optional: Add border-radius for rounded corners */
   box-shadow: 0 0 10px rgb(0, 0, 0);
   text-align: left;
+  color: white;
 }
 
 .large-text {
@@ -78,8 +79,8 @@ body {
 .tutorial-button {
   padding: 5px;
   font-size: 18px;
-  background-color: #00ff08;
-  color: rgb(0, 0, 0);
+  background-color: #ff6060;
+  color: rgb(255, 255, 255);
   border: 2px solid hsl(0, 0%, 0%);
   border-radius: 5px;
 
@@ -88,5 +89,6 @@ body {
 }
 
 .tutorial-button:hover {
-  background-color: #00ffe5;
+  background-color: #30ffac;
+  color: rgb(0, 0, 0);
 }
