--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -106,7 +106,7 @@
     color: rgb(0, 0, 0);
     border: 2px solid hsl(0, 0%, 0%);
     border-radius: 5px;
-
+    z-index: 10;
     cursor: pointer;
     transition: background-color 0.2s;
 }
