--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -3,11 +3,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 800px;
-    height: 800px;
+    width: auto;
+    height: auto;
     background: linear-gradient(to bottom, #ffb672, rgb(255, 180, 180));
-
-    border: 2px solid black;
+    border: 4px solid black;
+    box-shadow: 10 10px rgba(0, 0, 0, 0.422);
     border-radius: 20px;
     padding: 20px;
     z-index: 100;
@@ -102,7 +102,7 @@
 .tutorial-button {
     padding: 5px;
     font-size: 18px;
-    background-color: #00ff08;
+    background-color: #00ff11;
     color: rgb(0, 0, 0);
     border: 2px solid hsl(0, 0%, 0%);
     border-radius: 5px;
@@ -112,5 +112,6 @@
 }
 
 .tutorial-button:hover {
-    background-color: #00ffe5;
+    background-color: #00b3ff;
+    color: white;
 }
