--- a/src/components/DialogBox.css
+++ b/src/components/DialogBox.css
@@ -1,10 +1,10 @@
 .dialog-box {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgb(255, 255, 255);
-    padding: 10px;
+    padding: 2rem;
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.314);
@@ -15,6 +15,7 @@
     /* Adjust font size as needed */
     text-align: center;
     /* Center the text */
+
 }
 
 .emailForm {
