first click of tutorial stops the animation

--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -109,12 +109,15 @@
     z-index: 10;
     cursor: pointer;
     transition: background-color 0.2s;
-    animation: sparkle 1s ease-in-out infinite;
 }
 
 .tutorial-button:hover {
     background-color: #00b3ff;
     color: white;
+}
+
+.tutorial-button.sparkle {
+    animation: sparkle 1s ease-in-out infinite;
 }
 
 @keyframes sparkle {
