--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -112,7 +112,7 @@
 }
 
 .tutorial-button:hover {
-    background-color: #00b3ff;
+    background-color: #00e1ff;
     color: white;
 }
 
@@ -127,6 +127,7 @@
 
     50% {
         transform: scale(1.1);
+        background-color: #00f2ff;
     }
 
     100% {
