--- a/src/styles.css
+++ b/src/styles.css
@@ -112,8 +112,16 @@ body {
   /* Ensure the overlay is on top of other content */
 }
 
+.control-buttons-container {
+  display: flex;
+  margin-top: 1%;
+  justify-content: center;
+}
+
 .control-button {
   margin-top: 1%;
+  margin-right: 5%;
+  margin-left: 5%;
   padding: 5px;
   font-size: 18px;
   background-color: rgb(255, 189, 145);
