--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-/* @font-face {
+@font-face {
   font-family: 'superfont';
   src: url('./img/superfont.ttf') format('truetype');
-} */
+}
 
 * {
   font-family: 'superfont', sans-serif;
