--- a/src/components/DialogBox.css
+++ b/src/components/DialogBox.css
@@ -4,7 +4,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgb(255, 255, 255);
-    padding: 2rem;
+    padding: 1rem;
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.314);
@@ -21,7 +21,7 @@
 .emailForm {
     display: flex;
     flex-direction: column;
-    max-width: 90%;
+    max-width: 60%;
     margin: 0 auto;
 }
 
@@ -57,9 +57,9 @@
 }
 
 .superhero-details img {
-    width: 90%;
+    width: 50%;
     /* Set the desired width */
-    height: 90%;
+    height: 50%;
     /* Set the desired height */
 }
 
@@ -95,7 +95,7 @@
 .content-container {
     display: flex;
     /* flex-direction: row; */
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     /* Make sure the content container takes the full width */
     margin-bottom: 1rem;
