UI edits, text and placements

--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -1,6 +1,6 @@
 .tutorial-dialog {
     position: fixed;
-    top: 50%;
+    top: 52%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: auto;
@@ -9,7 +9,7 @@
     border: 4px solid black;
     box-shadow: 10 10px rgba(0, 0, 0, 0.422);
     border-radius: 20px;
-    padding: 20px;
+    padding: 10px;
     z-index: 100;
     display: flex;
     flex-direction: column;
@@ -118,4 +118,18 @@
     100% {
         transform: scale(1);
     }
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
 }
