--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -113,6 +113,7 @@
     50% {
         transform: scale(1.1);
         background-color: #00f2ff;
+        box-shadow: 2px 2px 30px rgb(252, 255, 66);
     }
 
     100% {
