--- a/src/styles.css
+++ b/src/styles.css
@@ -59,11 +59,11 @@ body {
   margin-top: 1%;
   margin-right: 5%;
   margin-left: 5%;
-  padding: 5px;
+  padding: 7px;
   font-size: 18px;
   background-color: rgb(96, 255, 144);
   color: rgb(0, 0, 0);
-  border: 2px solid hsl(0, 0%, 0%);
+  border: 3px solid hsl(0, 0%, 0%);
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.2s;
@@ -125,12 +125,13 @@ body {
   margin-top: 1%;
   margin-right: 1%;
   margin-left: 1%;
-  padding: 5px;
+  padding: 7px;
   font-size: 18px;
   background-color: rgb(255, 200, 97);
   color: rgb(255, 255, 255);
-  border: 2px solid hsl(0, 0%, 0%);
+  border: 3px solid hsl(0, 0%, 0%);
   border-radius: 5px;
+  box-shadow: 5px 5px 20px rgb(255, 200, 0);
 }
 
 .control-button:hover {
