--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -5,7 +5,7 @@
     transform: translate(-50%, -50%);
     width: auto;
     height: auto;
-    background: linear-gradient(to bottom, #ffff72, rgb(199, 255, 180));
+    background: linear-gradient(to bottom, #f3f36f, rgb(181, 235, 182));
     border: 2px solid rgba(0, 0, 0, 0.8);
     box-shadow: 10 10px rgba(0, 0, 0, 0.422);
     border-radius: 20px;
