--- a/src/components/Tutorial.css
+++ b/src/components/Tutorial.css
@@ -5,7 +5,7 @@
     transform: translate(-50%, -50%);
     width: auto;
     height: auto;
-    background: linear-gradient(to bottom, #e9e981, rgb(181, 235, 219));
+    background: linear-gradient(to bottom, #a4e981, rgb(181, 235, 219));
     border: 2px solid rgba(0, 0, 0, 0.8);
     box-shadow: 10 10px rgba(0, 0, 0, 0.422);
     border-radius: 20px;
